--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@300;400;700&family=Roboto+Mono&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 .App {
   padding: 2rem 5rem;
   font-family: var(--cad-font-sans-serif);
